<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuperMarketProduct">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FullName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:textColorHint="#1872A4"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeColor="#666666"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="#1872A4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:hint="@string/full_name"
            android:inputType="text"
            android:textColorHint="#1872A4" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="23dp"
        app:errorEnabled="true"
        android:ems="10"
        android:textColorHint="#1872A4"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeColor="#666666"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="#1872A4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColorHint="#1872A4" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Adrress"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="23dp"
        android:ems="15"
        android:textColorHint="#1872A4"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeColor="#666666"
        app:boxStrokeWidthFocused="1dp"
        app:errorEnabled="true"
        app:hintTextColor="#1872A4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:hint="@string/your_address"
            android:inputType="text"
            android:textColorHint="#1872A4" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/kind_product"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:textColorHint="#1872A4"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeColor="#666666"
        app:boxStrokeWidthFocused="1dp"
        app:errorEnabled="true"
        app:hintTextColor="#1872A4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:hint="@string/kind_product"
            android:inputType="text"
            android:textColorHint="#1872A4" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_superMarket"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:textColorHint="#1872A4"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeColor="#666666"
        app:boxStrokeWidthFocused="1dp"
        app:counterMaxLength="8"
        app:errorEnabled="true"
        app:hintTextColor="#1872A4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:hint="@string/name_supermarket"
            android:inputType="text"
            android:textColorHint="#1872A4" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/note"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:textColorHint="#1872A4"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeColor="#666666"
        app:boxStrokeWidthFocused="1dp"
        app:counterMaxLength="8"
        app:errorEnabled="true"
        app:hintTextColor="#1872A4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:hint="@string/note"
            android:inputType="text"
            android:textColorHint="#1872A4" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/orderbtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/rectangle_25"
        android:gravity="center"
        android:text="@string/order_now"
        android:textSize="20sp"
        android:textColor="#FFFFFF" />

</LinearLayout>