<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/navigation_bar"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Toolbar
                android:id="@+id/toolbar"
                android:background="@color/colorPrimary"
                android:title="@string/app_name"
                android:titleTextColor="#FFFFFF"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <ImageView
                    android:src="@drawable/baseline_priority_high_24"
                    android:id="@+id/languace"
                    android:layout_gravity="end"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

            </Toolbar>


            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/slider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.smarteist.autoimageslider.SliderView
                        android:id="@+id/imageSlider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:sliderAnimationDuration="600"
                        app:sliderAutoCycleDirection="back_and_forth"
                        app:sliderAutoCycleEnabled="true"
                        app:sliderIndicatorAnimationDuration="600"
                        app:sliderIndicatorGravity="center_horizontal|bottom"
                        app:sliderIndicatorOrientation="horizontal"
                        app:sliderIndicatorRadius="2dp"
                        app:sliderIndicatorSelectedColor="#000000"
                        app:sliderIndicatorUnselectedColor="#2196F3"
                        app:sliderScrollTimeInSec="1"
                        app:sliderStartAutoCycle="true" />

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:gravity="left"
                android:id="@+id/row1"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:padding="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/superMarketCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        app:cardElevation="10dp"
                        app:cardCornerRadius="20dp">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentBottom="true"
                                android:layout_toStartOf="@+id/elecImage"
                                android:fontFamily="@font/roboto_medium"
                                android:gravity="center"
                                android:text="@string/supermarket"
                                android:padding="4dp"
                                android:textColor="@color/black"
                                android:textSize="13sp" />

                            <com.airbnb.lottie.LottieAnimationView
                                android:id="@+id/elecImage"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentBottom="true"
                                android:layout_marginLeft="5dp"
                                app:lottie_autoPlay="true"
                                app:lottie_rawRes="@raw/supermarket"
                                app:lottie_loop="true" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/resturantProductCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        app:cardElevation="10dp"
                        app:cardCornerRadius="20dp">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/elecName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentBottom="true"
                                android:layout_toStartOf="@+id/ds"
                                android:fontFamily="@font/roboto_medium"
                                android:gravity="center"
                                android:text="@string/restaurants"
                                android:padding="5dp"
                                android:textColor="@color/black"
                                android:textSize="14sp" />

                            <com.airbnb.lottie.LottieAnimationView
                                android:id="@+id/ds"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentBottom="true"
                                android:layout_marginLeft="5dp"
                                app:lottie_autoPlay="true"
                                app:lottie_rawRes="@raw/resturant"
                                app:lottie_loop="true" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/orderCard"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        app:cardElevation="10dp"
                        app:cardCornerRadius="20dp">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/superMarket"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentEnd="true"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="10dp"
                                android:fontFamily="@font/roboto_medium"
                                android:gravity="left"
                                android:text="@string/new_order"
                                android:padding="5dp"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                            <com.airbnb.lottie.LottieAnimationView
                                android:layout_width="120dp"
                                android:layout_height="90dp"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentBottom="true"
                                android:layout_marginTop="10dp"
                                app:lottie_autoPlay="true"
                                app:lottie_loop="true"
                                app:lottie_rawRes="@raw/new_order" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>


            </LinearLayout>

            <TextView
                android:text="@string/custom_orders"
                android:gravity="left"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_medium"
                android:textSize="20sp"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:gravity="left"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/add_resturantCard"
                    app:cardElevation="5dp"
                    android:layout_gravity="left"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:layout_width="100dp"
                    android:layout_height="130dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            app:lottie_autoPlay="true"
                            app:lottie_rawRes="@raw/pharmacies"
                            app:lottie_loop="true" />

                        <TextView
                            android:text="@string/Pharmacies"
                            android:textSize="15dp"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/customOrderCard"
                    app:cardElevation="5dp"
                    android:layout_gravity="left"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:layout_width="100dp"
                    android:layout_height="130dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            app:lottie_autoPlay="true"
                            app:lottie_rawRes="@raw/new_order_btn"
                            app:lottie_loop="true" />

                        <TextView
                            android:text="@string/custom_order"
                            android:textSize="15dp"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FAFAFA"
        app:menu="@menu/menu" />

</RelativeLayout>